# culi

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  IMPLEMENTATION_STATUS.md  LOCAL_SETUP_QUICKSTART.md  MIGRATIONS.md  Makefile  README.md  README_en.md  REDIS_USAGE.md  REFACTOR_COMPLETED.md  REFACTOR_SUMMARY.md  SETUP_CHECKLIST.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/core/: config.py  llm_config.py  llm_router.py  logging.py  security.py
app/db/: base.py  init_db.py  session.py
app/domain/: __init__.py
app/graph/: app_graph.py  state.py
app/integrations/: connection_factory.py  kiotviet_direct_client.py  kiotviet_mcp_client.py  kiotviet_oauth.py  supported_apps.py  web_search_client.py
app/memory/: chat_memory.py  vector_store.py
app/models/: __init__.py  agent_run.py  agent_step.py  app_connection.py  connected_app.py  conversation.py  mcp_connection.py  message.py  user.py  workspace.py
app/prompts/: answer_prompt.txt  app_plan_prompt.txt  intent_router_prompt.txt  planner_prompt.txt  router_prompt.txt
app/repositories/: __init__.py  app_connection_repo.py  connected_app_repo.py  conversation_repo.py  mcp_connection_repo.py  message_repo.py  (+2 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_en.md  LOCAL_DEV_SETUP.md  langgraph_chart.mmd
local_dev/: .gitignore  README.md  README_en.md  docker-compose.yml
migrations/: README.md  README_en.md  env.py
scripts/: docker-entrypoint.sh  generate_encryption_key.py  generate_langgraph_chart.py  run_dev.sh
tests/: conftest.py
(+54 files in other folders)
